# openapi.json
@@ -2797,6 +2797,41 @@
           }
         }
       }
+    },
+    "/jobApplicant": {
+      "post": {
+        "summary": "An endpoint to create a job applicant",
+        "tags": ["Job Applicant"],
+        "operationId": "createJobApplicant",
+        "requestBody": {
+          "$ref": "#/components/requestBodies/JobApplicant"
+        },
+        "responses": {
+          "200": {
+            "description": "Successful creation of job applicant",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/JobApplicant"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid Input",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized. An Expert authenticated session needs to be created"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -3136,6 +3171,26 @@
             "type": "number"
           }
         }
+      },
+      "JobApplicant": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "resume": {
+            "type": "string"
+          },
+          "note": {
+            "type": "string"
+          },
+          "userId": {
+            "type": "number"
+          },
+          "jobId": {
+            "type": "number"
+          }
+        }
       }
     },
     "requestBodies": {
@@ -3443,6 +3498,29 @@
           }
         },
         "required": true
+      },
+      "JobApplicant": {
+        "description": "Information about the Job Applicant of FTRV",
+        "content": {
+          "multipart/form-data": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "resume": {
+                  "type": "string",
+                  "format": "binary"
+                },
+                "note": {
+                  "type": "string"
+                },
+                "jobId": {
+                  "type": "number"
+                }
+              }
+            }
+          }
+        },
+        "required": true
       }
     },
     "responses": {
@@ -3496,6 +3574,17 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/Document"
+            }
+          }
+        },
+        "required": true
+      },
+      "jobApplicant": {
+        "description": "Information about the job applicant of FTRV",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/JobApplicant"
             }
           }
         },
